# bird-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  init_birds_database.sh
admin/: fastapi.Dockerfile  fastapi.env.example  pyproject.toml
admin/src/: admin.py  auth.py  database.py  main.py  manager.py  models.py  settings.py  user.py
bird-service/: fastapi.Dockerfile  fastapi.env.example  pyproject.toml
bird-service/src/: main.py  manager.py
bird-service/src/admin/: admin.py  auth.py  user.py
bird-service/src/api/v1/: bird.py  user.py
bird-service/src/core/: database.py  settings.py
bird-service/src/models/: models.py
bird-service/src/schemas/: schemas.py
bird-service/src/services/: observations.py  users.py
nginx/: nginx.conf
nginx/conf.d/: site.conf
postgresql-database/: birds-database-dump.sql  birds-database-functions.sql  birds-database-indexes.sql  birds-database-queries.sql  birds-database-sql-only.sql  birds-database-triggers.sql  birds-database.sql  postgresql.Dockerfile  postgresql.env.example
sql/: birds_database.sql
