[tool.poetry]
name = "admin"
version = "0.0.0"
description = "This admin panel is used to fill postgres database"
authors = ["no80dy <no8odyas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.29.0"
uvloop = "^0.19.0"
sqlalchemy-utils = "^0.41.1"
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
sqladmin = "^0.15.2"
passlib = "^1.7.4"
itsdangerous = "^2.1.2"
typer = "^0.9.0"
gunicorn = "^21.2.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
